# voice-to-text

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/repositories/: __init__.py  whisper.py
src/routers/: __init__.py  transcription.py
src/schemas/: __init__.py  transcription.py
src/services/: __init__.py  transcription.py
